overflow solved in discussion

--- a/src/styles/Discussion.css
+++ b/src/styles/Discussion.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     position: absolute;
     top: 0px;
     z-index: -50;
@@ -58,6 +58,7 @@
     margin-left: 30px;
     margin-right: 20px;
     border-radius: 30px;
+    margin-bottom: 50px;
     /* overflow: hidden; */
     /* scroll-behavior: smooth; */
 }
